--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 	<main class="main">
 		<div class="container main-container">
 			<!-- profile -->
-			<section class="section section-profile" id="profile">
-				<img src="./assets/img/image.jpeg" alt="my photo" class="section section-profile-photo">
+			 <section class="section section-profile" id="profile">
+					<img src="./assets/img/image.jpeg" alt="my photo" class="section section-profile-photo">
 				<div class="section-profile-title">
 					<h1 class="section-title main-title">BURLACHENKO EVGENIYA</h1>
 					<h3 class="section-subtitle-profile">WEB-DEVELOPER</h3>
@@ -137,7 +137,8 @@
 			<!-- code example -->
 			<section class="section" id="code">
 				<h2 class="section-title">Code example</h2>
-				<pre class="pre section-p"><code>
+				<div>
+<pre class="pre section-p"><code>
 
 function highAndLow(numbers){
 	var numArray = 
@@ -148,8 +149,10 @@ function highAndLow(numbers){
 	Math.max.apply(null, numArray);
 	 return (max + " " + min);
   }
-				</code></pre>
-			</section>
+	</code></pre>
+				</div>
+
+		</section>
 			<!-- work expirience -->
 			<section class="section" id="work">
 				<h2 class="section-title">Work experience</h2>
@@ -201,15 +204,19 @@ function highAndLow(numbers){
 			<section class="section section-languages" id="languages">
 				<h2 class="section-title">Languages</h2>
 				<p class="section-item">B1 - Pre-Intermediate</p>
-			</section>
+			</section> 
 		</div>
 	</main>
 	<!-- footer -->
 	<footer class="footer">
 		<div class="container footer-container ">
 			<div class="section section-footer-githab">
-				<a  href="https://github.com/evgeniya-burlachenko" class="github nav-link github-footer">
-					EVGENIYA BURLACHENKO</a>
+				<!-- <a  href="https://github.com/evgeniya-burlachenko" class="github nav-link github-footer">
+					EVGENIYA BURLACHENKO</a> -->
+					<a href="https://github.com/evgeniya-burlachenko" class="rss">
+						<img src="assets/img/git.png" alt="my photo" width="100" height="100"
+							class="">
+					</a>
 			</div>
 			<div class="section section-rss">
 				<a href="https://rs.school/js/" class="rss">
