--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						Telegram: <a href="https://t.me/evgeniyaby" title="github">@evgeniyaby</a>
 					</li>
 					<li class="section-item contact-item">
-						Habr: <a href="https://Habr.com/evgeniya-burlachenko1" title="habr">evgeniya-burlachenko1</a>
+						Habr: <a href="https://career.habr.com/evgeniya-burlachenko1" title="habr">evgeniya-burlachenko1</a>
 					</li>
 				</ul>
 			</section>
@@ -211,8 +211,6 @@ function highAndLow(numbers){
 	<footer class="footer">
 		<div class="container footer-container ">
 			<div class="section section-footer-githab">
-				<!-- <a  href="https://github.com/evgeniya-burlachenko" class="github nav-link github-footer">
-					EVGENIYA BURLACHENKO</a> -->
 					<a href="https://github.com/evgeniya-burlachenko" class="rss">
 						<img src="assets/img/git.png" alt="my photo" width="100" height="100"
 							class="">
